--- a/README.rdoc
+++ b/README.rdoc
@@ -1,65 +1,38 @@
-= validates_email_format_of Gem and Rails Plugin
+= email_validator ActiveModel::EachValidator
 
 Validate e-mail addresses against RFC 2822 and RFC 3696.
 
 == Installation
 
-Installing as a gem:
-
-  gem install validates_email_format_of
-
-Installing as a Ruby on Rails 2 plugin:
-
-  ./script/plugin install http://github.com/alexdunae/validates_email_format_of.git
-
-Or in your Rails 3 Gemfile
-
-  gem 'validates_email_format_of', :git => 'git://github.com/alexdunae/validates_email_format_of.git'
-
+  gem 'vjt-email_validator', :git => 'git://github.com/vjt/email_validator'
 
 == Usage
 
  class Person < ActiveRecord::Base
-   validates_email_format_of :email
+   validates :email, :email => true
  end
-
-As of version 1.4, it's possible to run e-mail validation tests (including MX 
-checks) without using ActiveRecord or even touching a database.  The 
-<tt>validate_email_format</tt> method will return <tt>nil</tt> on a valid 
-e-mail address or an array of error messages for invalid addresses.
-
-  results = ValidatesEmailFormatOf::validate_email_format(email, options)
-
-  if results.nil?
-    # success!
-  else
-    puts results.join(', ')
-  end
-
 
 === Options
 
+Giving `:email => true` to the `validate` method uses the following default options.
+Customize them using `:email => { .. }`; E.g. `:email => {:check_mx => true}`
+
   :message
-     String. A custom error message (default is: " does not appear to be a valid e-mail address")
-  :on
-     Symbol. Specifies when this validation is active (default is :save, other options :create, :update)
-  :allow_nil
-     Boolean. Allow nil values (default is false)
-  :allow_blank
-     Boolean. Allow blank values (default is false)
+     String. A custom error message (default is: "does not appear to be a valid e-mail address")
+  :mx_message
+     String. A custom error message displayed when there is no MX for the given e-mail address
+     (default is: "is not routable")
+  :multiple_message
+     String. A custom error message displayed when one of the e-mail addresses in the record
+     is invalid (default is "appears to contain an invalid e-mail address)
+  :multiple
+     Boolean. Allows multiple email addresses separated by space and/or comma/colon
   :check_mx
      Boolean. Check domain for a valid MX record (default is false)
-  :if
-     Specifies a method, proc or string to call to determine if the validation should occur 
-     (e.g. :if => :allow_validation, or :if => Proc.new { |user| user.signup_step > 2 }). The method, 
-     proc or string should return or evaluate to a true or false value. 
-  :unless
-     See :if option.
   :local_length
     Maximum number of characters allowed in the local part (default is 64)
   :domain_length
     Maximum number of characters allowed in the domain part (default is 255)
-
 
 == Testing
 
@@ -69,18 +42,20 @@ The unit tests for this plugin use an in-memory sqlite3 database.
 
 == Resources
 
-* https://github.com/alexdunae/validates_email_format_of
+* Based on http://github.com/alexdunae/validates_email_format_of
+* http://github.com/vjt/email_validator
 
-== Credits
+== Original Credits
 
 Written by Alex Dunae (dunae.ca), 2006-11.
 
 Many thanks to the plugin's recent contributors: https://github.com/alexdunae/validates_email_format_of/contributors
 
 Thanks to Francis Hwang (http://fhwang.net/) at Diversion Media for creating the 1.1 update.
-
 Thanks to Travis Sinnott for creating the 1.3 update.
-
 Thanks to Denis Ahearn at Riverock Technologies (http://www.riverocktech.com/) for creating the 1.4 update.
-
 Thanks to George Anderson (http://github.com/george) and 'history' (http://github.com/history) for creating the 1.4.1 update.
+
+== Rewrite
+
+Rewrote by Marcello Barnaba (vjt@openssl.it), 2011-02 as an ActiveModel::EachValidator
